--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
 
-	<title>App | Bootstrap 5 App Landing Template</title>
+	<title>DBoT landing page</title>
 
 	<!-- <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/svg" /> -->
 
