Delete unused sections

--- a/index.html
+++ b/index.html
@@ -55,16 +55,10 @@
 									<a class="page-scroll" href="#about">About</a>
 								</li>
 								<li class="nav-item">
-									<a class="page-scroll" href="#pricing">Pricing</a>
-								</li>
-								<li class="nav-item">
 									<a class="page-scroll" href="#team">Team</a>
 								</li>
 								<li class="nav-item">
 									<a class="page-scroll" href="#testimonial">Testimonial</a>
-								</li>
-								<li class="nav-item">
-									<a class="page-scroll" href="#contact">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -105,30 +99,6 @@
 	</section>
 
 	<section class="client-logo-area client-logo-three">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-6">
-					<div class="single-client text-center">
-						<img src="assets/images/client-logo/graygrids.svg" alt="Logo" />
-					</div>
-				</div>
-				<div class="col-md-3 col-6">
-					<div class="single-client text-center">
-						<img src="assets/images/client-logo/uideck.svg" alt="Logo" />
-					</div>
-				</div>
-				<div class="col-md-3 col-6">
-					<div class="single-client text-center">
-						<img src="assets/images/client-logo/ayroui.svg" alt="Logo" />
-					</div>
-				</div>
-				<div class="col-md-3 col-6">
-					<div class="single-client text-center">
-						<img src="assets/images/client-logo/lineicons.svg" alt="Logo" />
-					</div>
-				</div>
-			</div>
-		</div>
 	</section>
 
 	<section id="features" class="features-area features-twelve">
@@ -255,99 +225,6 @@
 		</div>
 	</section>
 
-	<section id="pricing" class="pricing-area pricing-thirteen">
-		<div class="section-title-two">
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<div class="content">
-							<span>Our Pricing</span>
-							<h2 class="fw-bold">Our Simple Pricing</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor
-								incididunt ut labore aliqua.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="row g-0 justify-content-center">
-				<div class="col-lg-4 col-md-7 col-sm-9">
-					<div class="pricing-style-thirteen text-center pricing-color-1">
-						<div class="pricing-price">
-							<h3 class="price">$50<span>/Month</span></h3>
-						</div>
-						<div class="pricing-title">
-							<span class="badge">20% Off</span>
-							<h4 class="title">Basic</h4>
-						</div>
-						<div class="pricing-list">
-							<ul>
-								<li>Full Access</li>
-								<li>Unlimited Bandwidth</li>
-								<li>50 gb Space</li>
-								<li>1 Month Support</li>
-							</ul>
-						</div>
-						<div class="pricing-btn rounded-buttons">
-							<a class="btn primary-btn-outline rounded-full" href="javascript:void(0)">
-								Sign Up Now !
-							</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-7 col-sm-9">
-					<div class="pricing-style-thirteen text-center pricing-active pricing-color-2">
-						<div class="pricing-price">
-							<h3 class="price">$199<span>/Month</span></h3>
-						</div>
-						<div class="pricing-title">
-							<span class="badge">Special</span>
-							<h4 class="title">Standard</h4>
-						</div>
-						<div class="pricing-list">
-							<ul>
-								<li>Full Access</li>
-								<li>Unlimited Bandwidth</li>
-								<li>50 gb Space</li>
-								<li>1 Month Support</li>
-							</ul>
-						</div>
-						<div class="pricing-btn rounded-buttons">
-							<a class="btn primary-btn rounded-full" href="javascript:void(0)"> Sign Up Now ! </a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-7 col-sm-9">
-					<div class="pricing-style-thirteen text-center pricing-color-3">
-						<div class="pricing-price">
-							<h3 class="price">$599<span>/Month</span></h3>
-						</div>
-						<div class="pricing-title">
-							<span class="badge">New</span>
-							<h4 class="title">Premium</h4>
-						</div>
-						<div class="pricing-list">
-							<ul>
-								<li>Full Access</li>
-								<li>Unlimited Bandwidth</li>
-								<li>50 gb Space</li>
-								<li>1 Month Support</li>
-							</ul>
-						</div>
-						<div class="pricing-btn rounded-buttons">
-							<a class="btn primary-btn-outline rounded-full" href="javascript:void(0)">
-								Sign Up Now !
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 	<section class="slider-seven">
 		<div class="section-title-two">
@@ -355,7 +232,7 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="content">
-							<span>Screenshorts</span>
+							<span>Screenshots</span>
 							<h2 class="fw-bold">App Screenshorts</h2>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor
@@ -951,136 +828,6 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 		</div>
 	</section>
 
-	<section id="contact" class="contact-us">
-		<div class="section-title-two">
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<div class="content">
-							<span>Contact Us</span>
-							<h2 class="fw-bold">Need Any Help?</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor
-								incididunt ut labore aliqua.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="contact-head">
-				<div class="inner-content">
-					<div class="row">
-						<div class="col-lg-8 col-12">
-							<div class="form-main">
-								<form class="form" method="post" action="#">
-									<div class="row">
-										<div class="col-lg-6 col-md-6 col-12">
-											<div class="form-group">
-												<input
-													name="name"
-													type="text"
-													placeholder="Your Name"
-													required="required"
-												/>
-											</div>
-										</div>
-										<div class="col-lg-6 col-md-6 col-12">
-											<div class="form-group">
-												<input
-													name="subject"
-													type="text"
-													placeholder="Your Subject"
-													required="required"
-												/>
-											</div>
-										</div>
-										<div class="col-lg-6 col-md-6 col-12">
-											<div class="form-group">
-												<input
-													name="email"
-													type="email"
-													placeholder="Your Email"
-													required="required"
-												/>
-											</div>
-										</div>
-										<div class="col-lg-6 col-md-6 col-12">
-											<div class="form-group">
-												<input
-													name="phone"
-													type="text"
-													placeholder="Your Phone"
-													required="required"
-												/>
-											</div>
-										</div>
-										<div class="col-12">
-											<div class="form-group message">
-												<textarea name="message" placeholder="Your Message"></textarea>
-											</div>
-										</div>
-										<div class="col-12">
-											<div class="form-group light-rounded-buttons">
-												<button type="submit" class="btn primary-btn">Send Message</button>
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-						<div class="col-lg-4 col-12">
-							<div class="contact-info">
-								<div class="single-head">
-									<div class="single-info">
-										<i class="lni lni-map-marker"></i>
-										<ul>
-											<li><span>Location</span></li>
-											<li>76/A, Green valle, Califonia <br />United State</li>
-										</ul>
-									</div>
-									<div class="single-info">
-										<i class="lni lni-phone"></i>
-										<ul>
-											<li><span>Call Us</span></li>
-											<li><a href="javascript:void(0)">+1 756 445 5658</a></li>
-											<li><a href="javascript:void(0)">+1 125 458 5555</a></li>
-										</ul>
-									</div>
-									<div class="single-info">
-										<i class="lni lni-envelope"></i>
-										<ul>
-											<li><span>Mail Us</span></li>
-											<li>
-												<a href="javascript:void(0)">
-													<span
-														class="__cf_email__"
-														data-cfemail="44373134342b3630043d2b313629252d286a272b29"
-														>[email&#160;protected]</span
-													>
-												</a>
-											</li>
-											<li>
-												<a href="javascript:void(0)">
-													<span
-														class="__cf_email__"
-														data-cfemail="12717d7c66737166526b7d67607f737b7e3c717d7f"
-														>[email&#160;protected]</span
-													>
-												</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 	<footer class="footer-area footer-six">
 		<div class="footer-widget">
