--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									Ipsum has been the industry's standard dummy text ever since.
 								</p>
 								<div class="button light-rounded-buttons">
-									<a href="#" class="btn primary-btn">Get started</a>
+									<a href="https://berkeley-dbt.azurewebsites.net/" target="_blank" rel="noopener noreferer" class="btn primary-btn">Get started</a>
 								</div>
 							</div>
 						</div>
@@ -346,7 +346,7 @@
 					<div class="col-12">
 						<div class="content">
 							<span>Our Team</span>
-							<h2 class="fw-bold">Our Creative Team</h2>
+							<h2 class="fw-bold">Our team</h2>
 							<p>
 								Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor
 								incididunt ut labore aliqua.
@@ -421,14 +421,14 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 								</svg>
 							</span>
 							<div class="image">
-								<img src="assets/images/team/team-1.jpg" alt="#" />
+								<img src="assets/images/team/rob.jpg" alt="Rob Mueller" />
 							</div>
 						</div>
 
 						<div class="info-head">
 							<div class="info-box">
-								<h4 class="name">Dahlia Moore</h4>
-								<span class="designation">Senior Manager</span>
+								<h4 class="name">Robert Mueller</h4>
+								<span class="designation">Project manager</span>
 							</div>
 
 							<div class="social-links">
@@ -519,14 +519,14 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 								</svg>
 							</span>
 							<div class="image">
-								<img src="assets/images/team/team-2.jpg" alt="#" />
+								<img src="assets/images/team/hector.jpg" alt="#" />
 							</div>
 						</div>
 
 						<div class="info-head">
 							<div class="info-box">
-								<h4 class="name">Jhone digo</h4>
-								<span class="designation">App Developer</span>
+								<h4 class="name">Hector Rincon</h4>
+								<span class="designation">Project lead</span>
 							</div>
 
 							<div class="social-links">
@@ -617,14 +617,14 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 								</svg>
 							</span>
 							<div class="image">
-								<img src="assets/images/team/team-3.jpg" alt="#" />
+								<img src="assets/images/team/andrew.jpg" alt="#" />
 							</div>
 						</div>
 
 						<div class="info-head">
 							<div class="info-box">
-								<h4 class="name">Zara tingo</h4>
-								<span class="designation">Web Developer</span>
+								<h4 class="name">Andrew Loeber</h4>
+								<span class="designation">Technology lead</span>
 							</div>
 
 							<div class="social-links">
@@ -715,14 +715,14 @@ C68.8,31.2,70,32.5,70,34.1L70,34.1z"
 								</svg>
 							</span>
 							<div class="image">
-								<img src="assets/images/team/team-4.jpg" alt="#" />
+								<img src="assets/images/team/john.jpg" alt="#" />
 							</div>
 						</div>
 
 						<div class="info-head">
 							<div class="info-box">
-								<h4 class="name">David Zone</h4>
-								<span class="designation">SEO Expert</span>
+								<h4 class="name">John Van</h4>
+								<span class="designation">Performance lead</span>
 							</div>
 
 							<div class="social-links">
